--- a/projects/mona-ui/styles/theme.scss
+++ b/projects/mona-ui/styles/theme.scss
@@ -83,6 +83,10 @@ input, textarea, button {
     display: none !important;
 }
 
+.mona-invisible {
+    visibility: hidden !important;
+}
+
 .mona-unselectable {
     &, & * {
         pointer-events: none !important;
@@ -867,39 +871,35 @@ span.mona-range-slider-tick-label {
     @include font-small;
 }
 
-div.mona-range-slider-handler {
+div.mona-range-slider-handle {
     background-color: var(--mona-primary);
     border: 1px solid var(--mona-primary-border-color);
     transition: box-shadow 0.15s ease-in;
     &:focus {
-        box-shadow: var(--mona-focus-shadow-dark);
+        box-shadow: var(--mona-focus-shadow);
     }
 }
 
 div.mona-range-slider-horizontal {
     & span.mona-range-slider-tick {
-        &.mona-range-slider-tick-visible {
-            &:first-child {
-                border-left: 1px solid var(--mona-border-color);
-            }
-            &:nth-child(even) {
-                border-right: 1px solid var(--mona-border-color);
-            }
+        &:first-child {
+            border-left: 1px solid var(--mona-border-color);
+        }
+        &:nth-child(even) {
+            border-right: 1px solid var(--mona-border-color);
         }
     }
 }
 
 div.mona-range-slider-vertical {
     & span.mona-range-slider-tick {
-        &.mona-range-slider-tick-visible {
-            &:first-child {
-                border-left: none;
-                border-top: 1px solid var(--mona-border-color);
-            }
-            &:nth-child(even) {
-                border-right: none;
-                border-bottom: 1px solid var(--mona-border-color);
-            }
+        &:first-child {
+            border-left: none;
+            border-top: 1px solid var(--mona-border-color);
+        }
+        &:nth-child(even) {
+            border-right: none;
+            border-bottom: 1px solid var(--mona-border-color);
         }
     }
 }
@@ -925,34 +925,30 @@ div.mona-slider-handle {
     background-color: var(--mona-primary);
     border: 1px solid var(--mona-primary-border-color);
     &:focus {
-        box-shadow: var(--mona-focus-shadow-dark);
+        box-shadow: var(--mona-focus-shadow);
     }
 }
 
 div.mona-slider-horizontal {
     & span.mona-slider-tick {
-        &.mona-slider-tick-visible {
-            &:first-child {
-                border-left: 1px solid var(--mona-border-color);
-            }
-            &:nth-child(even) {
-                border-right: 1px solid var(--mona-border-color);
-            }
+        &:first-child {
+            border-left: 1px solid var(--mona-border-color);
+        }
+        &:nth-child(even) {
+            border-right: 1px solid var(--mona-border-color);
         }
     }
 }
 
 div.mona-slider-vertical {
     & span.mona-slider-tick {
-        &.mona-slider-tick-visible {
-            &:first-child {
-                border-left: none;
-                border-top: 1px solid var(--mona-border-color);
-            }
-            &:nth-child(even) {
-                border-right: none;
-                border-bottom: 1px solid var(--mona-border-color);
-            }
+        &:first-child {
+            border-left: none;
+            border-top: 1px solid var(--mona-border-color);
+        }
+        &:nth-child(even) {
+            border-right: none;
+            border-bottom: 1px solid var(--mona-border-color);
         }
     }
 }
