--- a/projects/mona-ui-tester/src/app/app.component.html
+++ b/projects/mona-ui-tester/src/app/app.component.html
@@ -416,6 +416,28 @@
                                 </mona-split-button>
                             </div>
 
+                            <div style="display: flex; align-items: center;">
+                                <button monaButton>Line 4</button>
+                                <mona-drop-down-button>
+                                    Dropdown Button
+                                    <mona-menu-item text="Menu Item I">
+                                        <ng-template monaMenuItemTextTemplate>
+                                            <span style="color: #cd92bc">Fu Xuan</span>
+                                        </ng-template>
+                                    </mona-menu-item>
+                                    <mona-menu-item text="Menu Item II">
+                                        <ng-template monaMenuItemTextTemplate>
+                                            <span style="color: #913e8b">Kafka</span>
+                                        </ng-template>
+                                        <mona-menu-item text="Menu Item I">
+                                            <ng-template monaMenuItemTextTemplate>
+                                                <span style="color: #cd92bc">Fu Xuan</span>
+                                            </ng-template>
+                                        </mona-menu-item>
+                                    </mona-menu-item>
+                                </mona-drop-down-button>
+                            </div>
+
                             <div style="display: flex; align-items: center; margin-top: 40px;">
                                 <mona-stepper orientation="horizontal" [steps]="stepperSteps" [step]="stepperStep" (stepChange)="onStepperStepChange($event)" [linear]="true" style="width: 600px;">
                                     <ng-template monaStepperLabelTemplate let-step let-index="index" let-active="active">
@@ -611,9 +633,20 @@
                                 </mona-splitter-pane>
                                 <mona-splitter-pane [collapsible]="true" [resizable]="false" [size]="40">
                                     <div style="width: 100%; height: 100%; padding: 2px;">
-                                        <!--                                        <button monaButton>Open Dialog</button>-->
                                         <mona-drop-down-list [data]="[1,2,3,4,5,6,7,8,9]"></mona-drop-down-list>
-
+                                        <mona-drop-down-button>
+                                            Upwards Dropdown Button
+                                            <mona-menu-item text="Menu Item I">
+                                                <ng-template monaMenuItemTextTemplate>
+                                                    <span style="color: #cd92bc">Fu Xuan</span>
+                                                </ng-template>
+                                            </mona-menu-item>
+                                            <mona-menu-item text="Menu Item II">
+                                                <ng-template monaMenuItemTextTemplate>
+                                                    <span style="color: #913e8b">Kafka</span>
+                                                </ng-template>
+                                            </mona-menu-item>
+                                        </mona-drop-down-button>
                                     </div>
                                 </mona-splitter-pane>
                             </mona-splitter>
