fix: progress bar style

--- a/projects/mona-ui/src/lib/progress-bars/modules/progress-bar/components/progress-bar/progress-bar.component.scss
+++ b/projects/mona-ui/src/lib/progress-bars/modules/progress-bar/components/progress-bar/progress-bar.component.scss
@@ -18,7 +18,7 @@ div.mona-progress-bar-track {
     align-items: center;
     justify-content: center;
     width: 100%;
-    padding: 3px 0 3px 0;
+    height: 100%;
     &-prev {
         transition: background-color 0.35s linear;
     }
