--- a/projects/mona-ui/styles/theme.scss
+++ b/projects/mona-ui/styles/theme.scss
@@ -1203,10 +1203,21 @@ div.mona-tab-strip-scroll {
 }
 
 /** List Box */
-.mona-list-box-actions {
+.mona-list-box-toolbar {
     background: var(--mona-background);
     border: 1px solid var(--mona-border-color);
-    border-left-color: transparent;
+    &-horizontal {
+        border-left-color: transparent;
+    }
+    &-vertical {
+        border-top-color: transparent;
+    }
+    &-horizontal-reverse {
+        border-right-color: transparent;
+    }
+    &-vertical-reverse {
+        border-bottom-color: transparent;
+    }
 }
 
 /** List View */
