--- a/projects/mona-ui/src/lib/list-box/components/list-box/list-box.component.scss
+++ b/projects/mona-ui/src/lib/list-box/components/list-box/list-box.component.scss
@@ -1,5 +1,5 @@
 :host {
-    width: 200px;
+    width: 300px;
     height: 250px;
 }
 
@@ -7,6 +7,18 @@ div.mona-list-box {
     display: flex;
     width: 100%;
     height: 100%;
+    &-horizontal {
+        flex-direction: row;
+    }
+    &-vertical {
+        flex-direction: column;
+    }
+    &-horizontal-reverse {
+        flex-direction: row-reverse;
+    }
+    &-vertical-reverse {
+        flex-direction: column-reverse;
+    }
 }
 
 div.mona-list-box-view {
@@ -15,13 +27,19 @@ div.mona-list-box-view {
     overflow: auto;
 }
 
-div.mona-list-box-actions {
+div.mona-list-box-toolbar {
     flex: 0 0 40px;
     display: flex;
     flex-direction: column;
+    row-gap: 4px;
+    column-gap: 0;
     justify-content: center;
     align-items: center;
-    row-gap: 4px;
+    &-vertical, &-vertical-reverse {
+        flex-direction: row;
+        column-gap: 4px;
+        row-gap: 0;
+    }
     & button {
         width: 30px;
         height: 30px;
